[Catalog] Update object-store related tests (#8519)
Really use a non-default warehouse, configure the warehouse _name_ via the misleadingly named property `CatalogProperties.WAREHOUSE_LOCATION`.

Also eliminate some duplicate code.